--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
 
     <div>
-        <h3>NPK Nutrients</h3>
+        <h2 style="margin-left: 30px;">NPK Nutrients</h2>
         <table border="6">
             <tr>
                 <th width="40%">Parameter</th>
@@ -72,7 +72,7 @@
     <br>
 
     <div>
-    <h3> Additional Sensors</h3>
+    <h2 style="margin-left: 30px;">Additional Sensors</h2>
     <table border="6">
         <tr>
             <th width="40%">Parameter</th>
