--- a/index.html
+++ b/index.html
@@ -44,36 +44,41 @@
     <h2>ESP32 NPK Sensor Module</h2>
     <br>
 
-    <div>
-        <h2 style="margin-left: 30px;">NPK Nutrients</h2>
-        <table border="6">
-            <tr>
-                <th width="40%">Parameter</th>
-                <th width="15%">Unit</th>
-                <th width="45%">Value</th>
-            </tr>
-            <tr>
-                <td>Nitrogen (N)</td>
-                <td> mg/kg</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Phosphorus (P)</td>
-                <td> mg/kg</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Potassium (K)</td>
-                <td> mg/kg</td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-    <br>
+    <div style="text-align: center;">
+    <h3 style="display: inline-block; margin: 0 auto 20px auto;">NPK Nutrients</h3>
+    
+    <table border="6" style="margin: 0 auto;">
+        <tr>
+            <th width="40%">Parameter</th>
+            <th width="15%">Unit</th>
+            <th width="45%">Value</th>
+        </tr>
+        <tr>
+            <td>Nitrogen (N)</td>
+            <td>mg/kg</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Phosphorus (P)</td>
+            <td>mg/kg</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Potassium (K)</td>
+            <td>mg/kg</td>
+            <td></td>
+        </tr>
+    </table>
+</div>
+<br>
+<br>
+<br>
+<br>
 
-    <div>
-    <h2 style="margin-left: 30px;">Additional Sensors</h2>
-    <table border="6">
+<div style="text-align: center;">
+    <h3 style="display: inline-block; margin: 0 auto 20px auto;">Additional Sensors</h3>
+    
+    <table border="6" style="margin: 0 auto;">
         <tr>
             <th width="40%">Parameter</th>
             <th width="15%">Unit</th>
@@ -100,7 +105,7 @@
             <td></td>
         </tr>
     </table>
-    </div>
+</div>
 
 
 
