Added refresh feature

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <!-- Server URL Input (Optional - for testing) -->
     <div style="margin-top: 20px; font-size: 14px; color: #666;">
-        <label for="serverUrl">Test URL (optional): </label>
+        <label for="serverUrl">ESP32 Server Link: </label>
         <input type="text" id="serverUrl" placeholder="http://your-esp32-server.com" 
                style="padding: 8px; width: 300px; border: 1px solid #ddd; border-radius: 4px;">
         <button onclick="testCustomUrl()" style="margin-left: 10px; padding: 8px 15px; background: #666; color: white; border: none; border-radius: 4px;">Test</button>
