--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1>🌱 EET Agri IOT</h1>
     <hr>
    
-    <h2>ESP32 NPK Sensor Module</h2>
+    <h2>ESP32 Sensor Module</h2>
     <br>
 
     <div style="text-align: center;">
@@ -115,6 +115,11 @@
         <tr>
             <td>Temperature</td>
             <td>°C</td>
+            <td></td>
+        </tr>
+                <tr>
+            <td>Weight</td>
+            <td>kg</td>
             <td></td>
         </tr>
     </table>
