--- a/mobile.html
+++ b/mobile.html
@@ -313,6 +313,11 @@
                     <td>°C</td>
                     <td></td>
                 </tr>
+                <tr>
+                    <td>Weight</td>
+                    <td>kg</td>
+                <td></td>
+                </tr>
             </table>
         </div>
     </div>
@@ -497,4 +502,5 @@
     </script>
 
 </body>
+
 </html>
