--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="icon" type="image/png" href="logo.png">
+    <!-- For different devices -->
+    <link rel="apple-touch-icon" href="logo.png">
+    
     <!-- PWA Configuration -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
